# Afya-Sahihi

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: adr.yml  bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pr-automation.yml
active_learning/: __init__.py  acquisition.py  assignment.py  effect_size.py  pyproject.toml  repository.py  scheduler.py  settings.py
active_learning/tests/: test_acquisition.py  test_assignment.py  test_effect_size.py  test_scheduler.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260416_0001_initial_schema.py  20260416_0002_ingestion_runs.py  20260417_0003_audit_hash_chain.py  20260418_0004_grades_table.py  20260419_0005_al_tables.py
backend/app/: errors.py  main.py  orchestrator.py  settings.py  state.py
backend/app/api/: chat.py  error_handler.py  health.py  middleware.py
backend/app/observability/: __init__.py  attributes.py  context.py  instrumentation.py  llm_spans.py  tracing.py
backend/app/validation/: phi.py
backend/audit/: hasher.py  writer.py
backend/audit/tests/: test_hasher.py  test_phi_redteam.py  test_phi_scrubber.py  test_writer_integration.py
backend/conformal/: __init__.py  calibration.py  coverage.py  drift.py  metrics.py  monitor.py  predictor.py  repository.py  scores.py  service.py  settings.py
backend/conformal/tests/: test_calibration.py  test_coverage.py  test_drift.py  test_monitor.py  test_predictor.py  test_scores.py  test_service.py
backend/ingestion/: __init__.py  __main__.py  docling_chunker.py  embedder.py  pipeline.py  protocols.py  repository.py  settings.py  structural_meta.py
backend/ingestion/tests/: test_pipeline.py  test_repository.py  test_structural_meta.py
backend/retrieval/: models.py  query_embedder.py  repository.py  reranker.py  service.py  settings.py
backend/retrieval/tests/: test_query_embedder.py  test_repository_integration.py  test_reranker.py  test_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_migrations.py
backend/tests/unit/: test_error_handler.py  test_gateway.py  test_llm_spans.py  test_orchestrator.py  test_span_attributes.py  test_tracing.py
backend/training/prefilter/: __main__.py  config.py  data.py  evaluate.py  train.py
backend/training/prefilter/tests/: test_data.py  test_evaluate.py
deploy/k3s/: 00-namespace.yaml  10-gateway.yaml  11-retrieval.yaml  12-conformal.yaml  13-audit.yaml  14-prefilter.yaml  16-eval-runner.yaml  17-al-scheduler.yaml  20-frontend.yaml  20-redis.yaml  30-labeling.yaml  README.md  kyverno-policies.yaml  sealed-secrets.yaml  traefik-ingress.yaml
deploy/systemd/: afya-sahihi-dcgm-exporter.service  afya-sahihi-pgbackrest-diff.service  afya-sahihi-pgbackrest-diff.timer  afya-sahihi-pgbackrest-full.service  afya-sahihi-pgbackrest-full.timer  afya-sahihi-redis.service  afya-sahihi-vllm-27b.service  afya-sahihi-vllm-4b.service  afya-sahihi-watcher.service  pgbackrest.conf  redis.conf
deploy/vllm/: afya-sahihi-preflight-27b  afya-sahihi-preflight-4b  afya-sahihi-vllm-27b-launch  afya-sahihi-vllm-4b-launch
docs/adr/: 0001-self-host-medgemma-on-vllm.md  0002-postgres-over-chromadb.md  0003-explicit-state-machine-over-langgraph.md  0004-docling-structural-ingestion.md  0005-k3s-over-full-kubernetes.md  0006-inspect-ai-three-tier-evals.md  0007-medgemma-4b-dual-role.md  0008-backend-data-plane-stack.md  0009-streamlit-for-clinician-labeling.md  0010-otel-collector-and-tempo-for-tracing.md  0011-arize-phoenix-for-llm-observability.md  0012-prometheus-loki-grafana-for-metrics-logs.md  0013-active-learning-acquisition-design.md  README.md
docs/models/: prefilter-v1.md
docs/observability/: PHOENIX_WORKFLOW.md  SPAN_ATTRIBUTES.md
docs/runbooks/: README.md  backup-restore.md  bootstrap.md  ci-branch-protection.md  ci-dependabot.md  coverage-drift.md  observability.md  vllm-operations.md
env/: .env.root  audit.env  conformal.env  eval.env  frontend.env  gateway.env  ingestion.env  labeling.env  observability.env  postgres.env  retrieval.env  systemd-watcher.env  vllm-27b.env  vllm-4b.env
eval/: pyproject.toml
eval/datasets/: README.md  tier1_golden.jsonl  tier1_golden.schema.md  tier2_regression.jsonl
eval/tests/: test_scorer.py  test_tier2_notifier.py  test_tier2_scorers.py
eval/tier1/: baseline.json  golden_set.py  scorer.py
eval/tier2/: golden_set.py  notifier.py  scorers.py  thresholds.json
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.ts  index.css  main.tsx
frontend/tests/: PredictionSet.test.tsx  ProvenancePanel.test.tsx  setup.ts  useSseChat.test.ts
labeling/: __init__.py  app.py  auth.py  daily_kappa.py  jwt_validator.py  kappa.py  pdf_viewer.py  phi.py  pyproject.toml  queue.py  repository.py  rubric.py  settings.py
labeling/tests/: test_app.py  test_auth.py  test_daily_kappa.py  test_jwt_validator.py  test_kappa.py  test_pdf_viewer.py  test_phi.py  test_queue.py  test_repository.py  test_rubric.py
research/paper_p1/: __init__.py  calibration.py  metrics.py  pyproject.toml
research/paper_p1/tests/: test_calibration.py  test_metrics.py
research/paper_p2/: __init__.py  adaptive.py  mondrian.py  pyproject.toml  reproduce.py  synthetic_shift.py  weighted.py
research/paper_p2/tests/: test_adaptive.py  test_mondrian.py  test_synthetic_shift.py  test_weighted.py
scripts/: bootstrap_issues.sh  dev_install.sh
scripts/audit/: verify_chain.py
scripts/deploy/: test_kyverno_policies.sh  test_watcher.sh
scripts/hooks/: check_adr_for_new_dep.sh  check_asyncpg_timeouts.sh  check_env_documented.sh  check_httpx_timeouts.sh  check_no_langchain_request_path.sh  check_no_phi_in_logs.sh  check_no_print.sh  check_orchestrator_lines.sh  run_eslint.sh  (+5 more)
tools/: requirements-dev.txt
(+80 files in other folders)
