[project]
name = "afya-sahihi-backend"
version = "0.0.1"
description = "Afya Sahihi backend — gateway, retrieval, conformal, orchestrator."
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }
authors = [{ name = "Aga Khan University" }]

# Exact pins per ADR-0008. No ranges on the request path (SKILL.md §13).
dependencies = [
    "alembic==1.13.2",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "asyncpg==0.30.0",
    "pgvector==0.3.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-httpx==0.48b0",
    "opentelemetry-instrumentation-asyncpg==0.48b0",
    "fastapi==0.116.0",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "sse-starlette==3.3.4",
    "PyJWT[crypto]==2.12.0",
    "redis==5.2.1",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "testcontainers[postgres]==4.8.2",
    "ruff==0.6.9",
    "pyright==1.1.384",
    "bandit[toml]==1.7.10",
]
# Ingestion pulls in Docling + sentence-transformers + PyTorch (~2 GB
# of models at runtime). Installed only in the ingestion container and
# on operator workstations that run the CronJob locally — not required
# by the gateway, retrieval, or conformal services. ADR-0004.
ingestion = [
    "docling==2.9.0",
    "sentence-transformers==3.2.1",
    "torch==2.4.1",
]
# Training pulls in Unsloth + TRL for LoRA fine-tuning. GPU required.
# Install on the operator workstation or training node only. ADR-0007.
training = [
    "unsloth==2024.12.4",
    "trl==0.12.2",
    "datasets==3.1.0",
    "torch==2.4.1",
]
# Retrieval reranker (bge-reranker-v2-m3 via CrossEncoder). CPU inference;
# installed in the retrieval container only. ADR-0002.
reranker = [
    "sentence-transformers==3.2.1",
    "torch==2.4.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion", "audit", "training", "retrieval", "conformal"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "T20"]
# T201 (print) is enforced project-wide via scripts/hooks/check_no_print.sh.
# Ruff's T201 is redundant but harmless; keep it on for IDE feedback.

[tool.pyright]
include = ["app", "tests"]
strict = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live Postgres via testcontainers",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic/versions"]
