[project]
name = "afya-sahihi-paper-p1"
version = "0.0.1"
description = "Paper P1: calibration analysis of MedGemma under distribution shift."
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }

# Zero runtime dependencies. Metrics and calibration fit are pure
# stdlib so paper figures reproduce without scipy/sklearn/torch.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
